fix(app): overflow set to auto

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin: 0px !important;
 }
 
